--- a/PegasusPlus/Views/Teachers/TeacherEdit.cshtml
+++ b/PegasusPlus/Views/Teachers/TeacherEdit.cshtml
@@ -527,6 +527,11 @@
 
 <script type="text/javascript">
 
+    function getFilename(file) {
+        var theSplit = file.split('\\');
+        return theSplit[theSplit.length - 1];
+    }
+
     // 1. ΠΕΔΙΟ ΑΔΤ
     function pressedAdt() {
         var a = document.getElementById('FileADT');
@@ -534,8 +539,7 @@
             fileLabelADT.innerHTML = '<i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>';
         }
         else {
-            var theSplit = a.value.split('\\');
-            filenameADT.innerHTML = " " + theSplit[theSplit.length - 1];
+            filenameADT.innerHTML = " " + getFilename(a.value);
             $('.btn-rmv1').addClass('rmv');
         }
     };
@@ -556,8 +560,7 @@
             fileLabelAFM.innerHTML = '<i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>';
         }
         else {
-            var theSplit = a.value.split('\\');
-            filenameAFM.innerHTML = " " + theSplit[theSplit.length - 1];
+            filenameAFM.innerHTML = " " + getFilename(a.value);
             $('.btn-rmv2').addClass('rmv');
         }
     };
@@ -578,8 +581,7 @@
             fileLabelAMKA.innerHTML = '<i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>';
         }
         else {
-            var theSplit = a.value.split('\\');
-            filenameAMKA.innerHTML = " " + theSplit[theSplit.length - 1];
+            filenameAMKA.innerHTML = " " + getFilename(a.value);
             $('.btn-rmv3').addClass('rmv');
         }
     };
@@ -600,8 +602,7 @@
             fileLabelAMA.innerHTML = '<i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>';
         }
         else {
-            var theSplit = a.value.split('\\');
-            filenameAMA.innerHTML = " " + theSplit[theSplit.length - 1];
+            filenameAMA.innerHTML = " " + getFilename(a.value);
             $('.btn-rmv4').addClass('rmv');
         }
     };
@@ -632,8 +633,7 @@
             fileLabelTriteknos.innerHTML = '<i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>';
         }
         else {
-            var theSplit = a.value.split('\\');
-            filenameTriteknos.innerHTML = " " + theSplit[theSplit.length - 1];
+            filenameTriteknos.innerHTML = " " + getFilename(a.value);
             $('.btn-rmv5').addClass('rmv');
         }
     };
@@ -654,8 +654,7 @@
             fileLabelPolyteknos.innerHTML = '<i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>';
         }
         else {
-            var theSplit = a.value.split('\\');
-            filenamePolyteknos.innerHTML = " " + theSplit[theSplit.length - 1];
+            filenamePolyteknos.innerHTML = " " + getFilename(a.value);
             $('.btn-rmv6').addClass('rmv');
         }
     };
@@ -676,8 +675,7 @@
             fileLabelSingleParent.innerHTML = '<i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>';
         }
         else {
-            var theSplit = a.value.split('\\');
-            filenameSingleParent.innerHTML = " " + theSplit[theSplit.length - 1];
+            filenameSingleParent.innerHTML = " " + getFilename(a.value);
             $('.btn-rmv7').addClass('rmv');
         }
     };
@@ -698,8 +696,7 @@
             fileLabelAmea.innerHTML = '<i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>';
         }
         else {
-            var theSplit = a.value.split('\\');
-            filenameAmea.innerHTML = " " + theSplit[theSplit.length - 1];
+            filenameAmea.innerHTML = " " + getFilename(a.value);
             $('.btn-rmv8').addClass('rmv');
         }
     };
@@ -720,8 +717,7 @@
             fileLabelAnergia.innerHTML = '<i class="fa fa-cloud-upload" aria-hidden="true" style="font-size:18px"></i>';
         }
         else {
-            var theSplit = a.value.split('\\');
-            filenameAnergia.innerHTML = " " + theSplit[theSplit.length - 1];
+            filenameAnergia.innerHTML = " " + getFilename(a.value);
             $('.btn-rmv9').addClass('rmv');
         }
     };
