--- a/PegasusPlus/Views/Shared/_SchoolLayout.cshtml
+++ b/PegasusPlus/Views/Shared/_SchoolLayout.cshtml
@@ -78,6 +78,10 @@
             -ms-user-select: none;
             user-select: none;
         }
+
+        #responsive-panel .k-menu {
+            padding: .1rem; /* was 0.5rem*/
+        }
     </style>
 
 </head>
