--- a/PegasusPlus/Views/Aitisis/AitisiEdit.cshtml
+++ b/PegasusPlus/Views/Aitisis/AitisiEdit.cshtml
@@ -94,7 +94,7 @@
                 @Html.ActionLink("Αρχεία", "TeacherUploads", "Teachers", new { afm = Model.TeacherAFM }, new { @class = "btn btn-info", style = "font-size:16px", target = "_blank" })
             </span>
             <span style="margin:0px 5px 5px 5px;float:right;font-family:'Segoe UI';font-size:16px">
-                @Html.ActionLink("Εκτύπωση", "AitisiPrint", "Aitisis", new { afm = Model.TeacherAFM }, new { @class = "btn btn-primary", style = "font-size:16px", target = "_blank" })
+                @Html.ActionLink("Εκτύπωση", "AitisiPrint", "Aitisis", new { aitisiId = Model.AitisisID }, new { @class = "btn btn-primary", style = "font-size:16px", target = "_blank" })
             </span>
             <span style="margin:0px 5px 5px 5px;float:right;font-family:'Segoe UI';font-size:16px">
                 <input id="buttonClientSide" style="font-family:'Segoe UI';font-size:16px" type="submit" value="Αποθήκευση" class="btn btn-success" />
