--- a/PegasusPlus/Views/Teachers/TeacherEdit.cshtml
+++ b/PegasusPlus/Views/Teachers/TeacherEdit.cshtml
@@ -91,7 +91,7 @@
                 @Html.ActionLink(" Αρχεία ", "TeacherUploads", "Teachers", new { afm = Model.AFM }, new { @class = "btn btn-info", style = "font-size:16px", target = "_blank" })
             </span>
             <span style="margin:0px 5px 5px 5px;float:right;font-family:'Segoe UI';font-size:16px">
-                @Html.ActionLink("Εκτύπωση", "TeacherPrint", "Teachers", new { afm = Model.AFM }, new { @class = "btn btn-primary", style = "font-size:16px", target = "_blank" })
+                @Html.ActionLink("Εκτύπωση", "TeacherInfoPrint", "Teachers", new { afm = Model.AFM }, new { @class = "btn btn-primary", style = "font-size:16px", target = "_blank" })
             </span>
             <span style="margin:0px 5px 5px 5px;float:right;font-family:'Segoe UI';font-size:16px">
                 <input id="buttonClientSide" style="font-family:'Segoe UI';font-size:16px" type="submit" value="Αποθήκευση" class="btn btn-success" />
