--- a/PegasusPlus/Views/School/AitiseisMoria.cshtml
+++ b/PegasusPlus/Views/School/AitiseisMoria.cshtml
@@ -52,7 +52,7 @@
             ).Width(24);
             columns.Template(@<text></text>)
             .ClientTemplate(
-            "<a class=\"k-button k-button-icontext\" href='" + Url.Action("AitisiMoriaPrint", "School") + "?aitisiId=#=AitisisID#' target = _blank><span class=\"k-icon k-print\"></span>Εκτύπωση</a>"
+            "<a class=\"k-button k-button-icontext\" href='" + Url.Action("AitisiMoriaPrint", "School") + "?aitisiId=#=AitisisID#' target = _blank><span class=\"k-icon k-justifyFull\"></span>Εκτύπωση</a>"
             ).Width(24);
         })
         .Filterable()
