--- a/PegasusPlus/Views/Teachers/SkillsEdit.cshtml
+++ b/PegasusPlus/Views/Teachers/SkillsEdit.cshtml
@@ -311,7 +311,7 @@
                         <div class="col-md-3">
                             @Html.LabelFor(model => model.Language2Level, new { @class = "col-form-label col-md-6" })
                             @(Html.Kendo().DropDownListFor(model => model.Language2Level)
-                            .Name("Language1Leve2")
+                            .Name("Language2Level")
                             .DataTextField("LevelText")
                             .DataValueField("LevelID")
                             .HtmlAttributes(new { style = "width:300px;" })
